--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/addons/p5.sound.min.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
@@ -34,21 +38,21 @@
   </head>
   <body>
     <main>
+        <h1>Firend Library - Creator</h1>
     </main>
     <script src="sketch.js"></script>
     <div id="sketch-container"></div>
 
     <div class="tab">
-        <button class="tablinks" onclick="changeTab(event, 'head')">Head</button>
-        <button class="tablinks" onclick="changeTab(event, 'bangs')">Bangs</button>
-        <button class="tablinks" onclick="changeTab(event, 'back')">Back</button>
+        <button class="tablinks" onclick="changeTab(event, 'head')"><img src="assets/svg/head1.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'bangs')"><img src="assets/svg/bangs1.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'back')"><img src="assets/svg/back3.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'eyes')"><img src="assets/svg/eye3.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'brows')"><img src="assets/svg/brow5.svg" width = 20px></button>
         <br>
-        <button class="tablinks" onclick="changeTab(event, 'eyes')">Eyes</button>
-        <button class="tablinks" onclick="changeTab(event, 'brows')">Eyebrows</button>
-        <button class="tablinks" onclick="changeTab(event, 'noses')">Nose</button>
-        <br>
-        <button class="tablinks" onclick="changeTab(event, 'mouths')">Mouth</button>
-        <button class="tablinks" onclick="changeTab(event, 'misc')">Misc.</button>
+        <button class="tablinks" onclick="changeTab(event, 'noses')"><img src="assets/svg/nose4.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'mouths')"><img src="assets/svg/mouth1.svg" width = 20px></button>
+        <button class="tablinks" onclick="changeTab(event, 'misc')"><img src="assets/svg/misc1.svg" width = 20px></button>
         <button class="tablinks" onclick="changeTab(event, 'bodyinfo')">Body</button>
     </div>
 
@@ -216,5 +220,7 @@
         <input id="ShirtColorInput" type="color"></input>
         <button onclick="setColor(torso, 'ShirtColorInput')">Confirm</button>
     </div>
+
+    <p>Site by Colin Day - In Progress!</p>
   </body>
 </html>
