Prettied up buttons

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <h3>Nudge</h3>
         <button onclick="nudgeFaceObject(eyes, 0, -0.05)">Up</button>
         <button onclick="nudgeFaceObject(eyes, 0, 0.05)">Down</button>
-        <button onclick="nudgeFaceObject(eyes, -0.05, 0)">Left</button>
-        <button onclick="nudgeFaceObject(eyes, 0.05, 0)">Right</button>
+        <button onclick="nudgeFaceObject(eyes, -0.05, 0)">&lt &gt</button>
+        <button onclick="nudgeFaceObject(eyes, 0.05, 0)">&gt &lt</button>
         <h3>Size</h3>
         <button onclick="scaleFaceObject(eyes, 0.05, 0.05)">Up</button>
         <button onclick="scaleFaceObject(eyes, -0.05, -0.05)">Down</button>
@@ -139,8 +139,8 @@
         <h3>Nudge</h3>
         <button onclick="nudgeFaceObject(brows, 0, -0.05)">Up</button>
         <button onclick="nudgeFaceObject(brows, 0, 0.05)">Down</button>
-        <button onclick="nudgeFaceObject(brows, -0.05, 0)">Left</button>
-        <button onclick="nudgeFaceObject(brows, 0.05, 0)">Right</button>
+        <button onclick="nudgeFaceObject(brows, -0.05, 0)">&lt &gt</button>
+        <button onclick="nudgeFaceObject(brows, 0.05, 0)">&gt &lt</button>
         <h3>Size</h3>
         <button onclick="scaleFaceObject(brows, 0.05, 0.05)">Up</button>
         <button onclick="scaleFaceObject(brows, -0.05, -0.05)">Down</button>
