Added Download Image

--- a/index.html
+++ b/index.html
@@ -276,10 +276,11 @@
     </div>
 
     <div id="download" class="tabcontent">
-        <h2>Download (Not Working)</h2>
+        <h2>Download (Only Download Image Works)</h2>
         <code id="FriendCodeExport"><span id="friendCode">...</span></code>
         <button onclick="copyCode('FriendCodeExport')">Copy Friend Code</button>
         <button onclick="downloadCode('FriendCodeExport')">Download Friend Code</button>
+        <button onclick="saveImage()">Download Image</button>
     </div>
 
     <div id="upload" class="tabcontent">
