--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h3>Color</h3>
         <input id="Misc1ColorInput" type="color"></input>
         <input id="Misc1ColorInputHex" placeholder="#ffffff"></input>
-        <button onclick="setColor(miscs1, 'Misc1ColorInput', 'Misc1ColorInputHex')">✔</button>
+        <button onclick="setColor('misc1', 'Misc1ColorInput', 'Misc1ColorInputHex')">✔</button>
         <h3>Nudge</h3>
         <button onclick="nudgeFaceObject('misc1', 0, -0.05)">Up</button>
         <button onclick="nudgeFaceObject('misc1', 0, 0.05)">Down</button>
@@ -237,7 +237,7 @@
         <h3>Color</h3>
         <input id="Misc2ColorInput" type="color"></input>
         <input id="Misc2ColorInputHex" placeholder="#ffffff"></input>
-        <button onclick="setColor(miscs2, 'Misc2ColorInput', 'Misc2ColorInputHex')">✔</button>
+        <button onclick="setColor('misc2', 'Misc2ColorInput', 'Misc2ColorInputHex')">✔</button>
         <h3>Nudge</h3>
         <button onclick="nudgeFaceObject('misc2', 0, -0.05)">Up</button>
         <button onclick="nudgeFaceObject('misc2', 0, 0.05)">Down</button>
