--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
         <h1>FriendLibrary</h1>
-        <h1><a class="button" href="friend-library/creator.html" style="color: #264aff; text-decoration: none;">Creator</a></h1>
+        <h1><a class="button" href="creator.html" style="color: #264aff; text-decoration: none;">Creator</a></h1>
     </main>
 
     <p>Site by Colin Day - In Progress!</p>
