Made da button Pretty

--- a/creator.html
+++ b/creator.html
@@ -44,6 +44,7 @@
         <h1>FriendLibrary <span style="color: #264aff;">Creator</span></h1>
     </main>
     <div class="creator">
+    <script src="friend.js"></script>
     <script src="creator.js"></script>
     <script>
         // Get the element with id="defaultOpen" and click on it
