--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main>
         <h1>FriendLibrary</h1>
-        <h1><a class="button" href="creator.html" style="color: #264aff; text-decoration: none;">Creator</a></h1>
     </main>
+    <script src="friend.js"></script>
+
+    <a class="creatorButtonWrapper" href="creator.html">
+        <img src="assets/stock/Tabia.png" class="sideIMG firstIMG" alt="Created Friend - Female and Black with dark purple hair"/>
+        <img src="assets/stock/Brad.png" class="middleIMG" alt="Created Friend - Male and white with olive hair"/>
+        <img src="assets/stock/Zahra.png" class="sideIMG lastIMG" alt="Created Friend - Woman and tanned wearing headscarf"/>
+        <span class="creatorButtonText">Creator</span>
+    </a>
+
+    </div>
 
     <p>Site by Colin Day - In Progress!</p>
   </body>
