--- a/creator.html
+++ b/creator.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <main>
-        <h1>FriendLibrary <span style="color: #264aff;">Creator</span></h1>
+        <h1> <a href="index.html" style="text-decoration: none; color: inherit;">FriendLibrary</a> <span style="color: #264aff;">Creator</span></h1>
     </main>
     <div class="creator">
     <script src="friend.js"></script>
