--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8" />
 
+    <title>FriendLibrary</title>
+
   </head>
   <body>
     <main>
@@ -19,14 +21,24 @@
     </main>
     <script src="friend.js"></script>
 
-    <a class="creatorButtonWrapper" href="creator.html">
+    <a class="creatorButtonWrapper blueButtonWrapper" href="creator.html">
         <img src="assets/stock/Tabia.png" class="sideIMG firstIMG" alt="Created Friend - Female and Black with dark purple hair"/>
         <img src="assets/stock/Brad.png" class="middleIMG" alt="Created Friend - Male and white with olive hair"/>
         <img src="assets/stock/Zahra.png" class="sideIMG lastIMG" alt="Created Friend - Woman and tanned wearing headscarf"/>
         <span class="creatorButtonText">Creator</span>
     </a>
 
-    </div>
+    <a class="creatorButtonWrapper magentaButtonWrapper" href="fortune.html">
+      <img src="assets/stock/Yancy (Young).png" class="middleIMG" alt=""/>
+      <img src="assets/stock/Yancy (Old).png" class="sideIMG lastIMG" alt=""/>
+      <span class="creatorButtonText">Fortune Teller</span>
+    </a>
+
+    <a class="creatorButtonWrapper magentaButtonWrapper" href="love.html">
+      <img src="assets/stock/Don Stars.png" class="sideIMG firstIMG" alt=""/>
+      <img src="assets/stock/Agnes.png" class="sideIMG lastIMG" alt=""/>
+      <span class="creatorButtonText">Love Tester</span>
+    </a>
 
     <p>Site by Colin Day - In Progress!</p>
   </body>
