--- a/love.html
+++ b/love.html
@@ -20,6 +20,10 @@
         <h1> <a href="index.html" style="text-decoration: none; color: inherit;">FriendLibrary</a> <span style="color: #e226ff;">Love Tester</span></h1>
     </main>
 
+    <script src="friend.js"></script>
+    <script src="love.js"></script>
+    <div id="sketch-container" class="sketch-container"></div>
+
     <p>Coming Soon!</p>
 
     <p>Powered by <a href="https://freeastrologyapi.com/">Free Astrology API</a></p>
